fixed most of the clipping issue of cards

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -158,10 +158,11 @@ Cards
   transition: transform 1000ms;
   /* max-height: 450px; */
   /* perspective: 1000px; */
+
 }
 
 .dreamcard.expanded {
-  height: auto;
+  /* height: auto; */
   /* max-height: none; */
   z-index: 1;
 }
@@ -179,6 +180,7 @@ Cards
   -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   position: absolute;
+  min-height: 25rem;
 }
 
 .card-front {
